LLM-EKS-deployment/eks/manifests/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: ollama
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb
