LLM-EKS-deployment/eks/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ollama
  name: ollama-service
spec:
  ports:
    - port: 80
      targetPort: 11434
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ollama-llm
